[tool.poetry]
name = "lightlightning"
version = "0.0.0"
description = "Light-weight wrapper of PyTorch Lightning"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/lightlightning"

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^1.4.9"
omegaconf = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "line-too-long",
]