[tool.poetry]
name = "lightlightning"
version = "2.0.0"
description = "Light-weight wrapper of PyTorch Lightning"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/lightlightning"

[tool.poetry.dependencies]
# python = "^3.10"
lightning = "^2.0.0"
omegaconf = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "line-too-long",
]